--- a/11.NetworkPrograming/app/src/main/res/values/strings.xml
+++ b/11.NetworkPrograming/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">11.NetworkPrograming</string>
     <string name="print_the_number_of_lines">Print the number of lines</string>
-    <string name="enter_url">Enter URL</string>
+    <string name="enter_url">Enter a URL</string>
+    <string name="clear">Clear</string>
 </resources>
