--- a/11.NetworkPrograming2/app/src/main/res/values/strings.xml
+++ b/11.NetworkPrograming2/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">11.NetworkPrograming2</string>
     <string name="print_the_number_of_characters">Print the number of characters</string>
-    <string name="enter_url">Enter URL</string>
+    <string name="enter_url">Enter a URL</string>
+    <string name="show_message">The number of characters in the page is </string>
+    <string name="clear">Clear</string>
 </resources>
