Them bai 13 phan 1

--- a/13.AndroidDrawing1/app/src/main/res/values/strings.xml
+++ b/13.AndroidDrawing1/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">13.AndroidDrawing1</string>
+    <string name="draw_rectangle">Draw rectangle</string>
+    <string name="draw_icon">Draw icon</string>
 </resources>
