--- a/13.AndroidDrawing1/app/src/main/res/values/strings.xml
+++ b/13.AndroidDrawing1/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">13.AndroidDrawing1</string>
     <string name="draw_rectangle">Draw rectangle</string>
     <string name="draw_icon">Draw icon</string>
+    <string name="back">Back</string>
 </resources>
